- example.conf - Corrected incorrect set::services-services statment in alias block - reported by mcskaf (#0000401)
- Documentation - Corrected Spelling mistake in HTM mode - Reported by CoNfOuNd (#0000387)
- Documentation - Added coadmin to table of oper types - Reported by FrostByghte (#0000359)
- Documentation - Corrected several HTML formating problems
- Commited first 20% of conf3, if anyone runs devel, DO NOT, it is BROKEN and will most likely NOT FUNCTION
  and it WILL burn, DIE, and WILL NOT WORK
- Fixed conf3 bug with _conf_except tkl
- /kline and /zline now use TKL
- Removed src/win32/unrealinstssl.iss and merged it into unrealinst.iss, add #define
  USE_SSL to the file to build an SSL package
- Added additional NT Service options to the win32 installer
- Made CLIENT_FLOOD more customizable
- Fixed some conf3 compile errors and block-modded _*_tld
- Fixed stats bug reported by RaYmAn
- Added a patch by McSkaf that will hopefully fix the win32 resolver crashes
- Converted badword to conf3
- Fixed some win32 problems with conf3
- Fixed a problem in config testing with conf3
- Modified the main conf3 searching routine to use a binary search, this should speed up
  config processing somewhat
- Converted the config flag parsing systems to use a binary search
- Conf3 cleanups
- Converted help and log to conf3
- Fixed a configure script bug involving gcc3 (#0000398, #0000412, #0000433) found and 
  fixed by mister
- Fixed alphabeticalising of named oper flags, added _conf/test_link
- Finished up conf3, still needing some directives added but it sortof works. Rehash doesn't yet. 
-  Fixed some idiotic lack of src/modules/Makefile.in changes for the sake of commands.so when 
  /zline /kline etc was moved to a module
- Converted _conf_alias to conf3, in the process changed the format to be slightly more
  stable. See aliases/aliases.conf for the format changes
- Numerous Sts-coded-conf3-while-sick bugs