@@ -47,7 +47,8 @@ MOD_FILES=SRC/L_COMMANDS.OBJ SRC/M_CHGHOST.OBJ SRC/M_SDESC.OBJ SRC/M_SETIDENT.OB
  SRC/M_SQLINE.OBJ SRC/M_KILL.OBJ SRC/M_TSCTL.OBJ SRC/M_UNKLINE.OBJ \
  SRC/M_UNSQLINE.OBJ SRC/M_UNZLINE.OBJ SRC/M_WHOIS.OBJ SRC/M_ZLINE.OBJ \
  SRC/SCAN.OBJ SRC/SCAN_SOCKS.OBJ SRC/SCAN_HTTP.OBJ SRC/M_TKL.OBJ SRC/M_VHOST.OBJ \
- SRC/M_CYCLE.OBJ SRC/M_SVSJOIN.OBJ SRC/M_SVSPART.OBJ SRC/INVISIBILITY.OBJ
+ SRC/M_CYCLE.OBJ SRC/M_SVSJOIN.OBJ SRC/M_SVSPART.OBJ SRC/M_SVSLUSERS.OBJ \
+ SRC/INVISIBILITY.OBJ
 
 ALL: CONF UNREAL.EXE WIRCD.EXE
 
@@ -364,6 +365,9 @@ src/m_svsjoin.obj: src/modules/m_svsjoin.c $(INCLUDES)
 
 src/m_svspart.obj: src/modules/m_svspart.c $(INCLUDES)
         $(CC) $(CFLAGS) src/modules/m_svspart.c
+
+src/m_svslusers.obj: src/modules/m_svslusers.c $(INCLUDES)
+	$(CC) $(CFLAGS) src/modules/m_svslusers.c
 
 src/scan.obj: src/modules/scan.c $(INCLUDES)
         $(CC) $(CFLAGS) src/modules/scan.c
